Add more example content

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,97 @@
       master of a single trade. Here is a a partial
       list of my skills:
       </p>
+      <columns>
+        <article>
+          <h3>Ecosystems</h3>
+          <p>
+          Java (Spring Boot, Dropwizard),
+          Ruby (Rails, Sinatra, Middleman),
+          Python,
+          JavaScript (Node, WebComponents, React, Vue, Aurelia),
+          HTML5,
+          CSS3,
+          Go,
+          Lua,
+          Embedded C,
+          C++,
+          Verilog,
+          VHDL,
+          LaTeX
+          </p>
+        </article>
+        <article>
+          <h3>Techologies</h3>
+          <p>
+          git,
+          Linux,
+          Ansible,
+          cloud-init,
+          Terraform,
+          Consul,
+          Vault,
+          TLS,
+          GnuPG,
+          OpenVPN,
+          Wireguard,
+          Docker,
+          Kubernetes,
+          Vagrant,
+          AWS,
+          Azure,
+          Heroku,
+          Digital Ocean,
+          Vim,
+          Emacs,
+          IntelliJ
+          </p>
+        </article>
+        <article>
+          <h3>Methodologies</h3>
+          <p>
+          Test Driven Development,
+          Test Automation,
+          Continuous Delivery,
+          Pair Programming,
+          Kanban,
+          SCRUM,
+          DevOps,
+          Infrastructure as Code,
+          Designing for Security
+          </p>
+        </article>
+      </columns>
     </section>
     <section>
       <h1>Hello Another Page</h1>
+      <p>
+      As a Freelance Consultant, Coach and Software Developer I can help your
+      team and your product to become better in delivering working and secure
+      software:
+      </p>
+      <h2>Hands-On Consulting with a dynamic Focus</h2>
+      <p>
+      Hands-On Consulting usually happens on-site. I join the team as a fellow developer and sup-
+      port them with delivering a working product. While working together, I can identify different
+      issues and pain points that can be leveraged to improve various aspects of the process and
+      the product being build. Through methodologies like pair programming and leading by ex-
+      ample I support the team in establishing practices that will help them to grow even further.
+      Here are my main areas of focus:
+      </p>
+      <ul>
+        <li>
+        Agile Methodologies: Pair Programming, Kanban, SCRUM, Retros,
+        Stand-Up/Dailies, ...
+        </li>
+        <li>
+        Delivery Performance: CI/CD, Trunk Based Development and Test
+        Automation
+        </li>
+        <li>
+        Architecture/Design Assessment: Let’s see how we can even further
+        improve existing systems by identifying pivotal pain points
+        </li>
+      </ul>
     </section>
   </body>
 </html>
