Add paged.js for browser preview

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Product Portfolio">
     <meta name="author" content="Chrissi & Jakob Holderbaum">
     <link href="portfolio.css" media="print" rel="stylesheet">
+    <script src="js/paged.polyfill.js"></script>
   </head>
 
   <body>
